infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: client
  template:     #template contains the pod config
    metadata: 
      labels: 
        app: client
    spec:
      containers:
        - name: client
          image: saiganesh03/client
---
# Config for Cluster IP service
apiVersion: v1
kind: Service
metadata: 
  name: client-srv
spec:
  type: ClusterIP #Even if we didn't specify the type, ClusterIP service will be created as default
  selector: # Selector selects the pods that this service need to cater
    app: client #Check above code, there the label is given to the pods
  ports: 
    - name: client
      protocol: TCP
      port: 3000 #This is the port of the ClusterIP service.
      targetPort: 3000 #This the port, the client service is listing to.
