infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: comments
  template:     #template contains the pod config
    metadata: 
      labels: 
        app: comments
    spec:
      containers:
        - name: comments
          image: saiganesh03/comments
---
# Config for Cluster IP service
apiVersion: v1
kind: Service
metadata: 
  name: comments-srv
spec:
  type: ClusterIP #Even if we didn't specify the type, ClusterIP service will be created as default
  selector: # Selector selects the pods that this service need to cater
    app: comments #Check above code, there the label is given to the pods
  ports: 
    - name: comments
      protocol: TCP
      port: 4001 #This is the port of the ClusterIP service.
      targetPort: 4001 #This the port, the comments service is listing to.
