infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: moderation
  template:     #template contains the pod config
    metadata: 
      labels: 
        app: moderation
    spec:
      containers:
        - name: moderation
          image: saiganesh03/moderation
---
# Config for Cluster IP service
apiVersion: v1
kind: Service
metadata: 
  name: moderation-srv
spec:
  type: ClusterIP #Even if we didn't specify the type, ClusterIP service will be created as default
  selector: # Selector selects the pods that this service need to cater
    app: moderation #Check above code, there the label is given to the pods
  ports: 
    - name: moderation
      protocol: TCP
      port: 4003 #This is the port of the ClusterIP service.
      targetPort: 4003 #This the port, the moderation service is listing to.
