infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: posts
  template:     #template contains the pod config
    metadata: 
      labels: 
        app: posts
    spec:
      containers:
        - name: posts
          image: saiganesh03/posts
        
---
# Config for Cluster IP service
apiVersion: v1
kind: Service
metadata: 
  name: posts-clusterip-srv
spec:
  type: ClusterIP #Even if we didn't specify the type, ClusterIP service will be created as default
  selector: # Selector selects the pods that this service need to cater
    app: posts #Check above code, there the label is given to the pods
  ports: 
    - name: posts
      protocol: TCP
      port: 4000 #This is the port of the ClusterIP service.
      targetPort: 4000 #This the port, the posts service is listing to.
