infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: posts-srv
spec:
  type: NodePort #NodePort type of service is used to expose the pods to outer world
  selector: # Selector selects the pods to be exposed, here all the pods with label "app: posts" will be exposed
    app: posts #Check posts-depl.yaml, there the label is given to the pods
  ports: 
    - name: posts
      protocol: TCP
      port: 4000 #This is the port of the NodePort service.
      targetPort: 4000 #This the port, the posts service is listing to.
