infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: query
  template:     #template contains the pod config
    metadata: 
      labels: 
        app: query
    spec:
      containers:
        - name: query
          image: saiganesh03/query
---
# Config for Cluster IP service
apiVersion: v1
kind: Service
metadata: 
  name: query-srv
spec:
  type: ClusterIP #Even if we didn't specify the type, ClusterIP service will be created as default
  selector: # Selector selects the pods that this service need to cater
    app: query #Check above code, there the label is given to the pods
  ports: 
    - name: query
      protocol: TCP
      port: 4002 #This is the port of the ClusterIP service.
      targetPort: 4002 #This the port, the query service is listing to.
